--- a/streamdeck-obstools/PropertyInspector/ImageSettings.html
+++ b/streamdeck-obstools/PropertyInspector/ImageSettings.html
@@ -20,9 +20,13 @@
         <details class="message">
             <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.com</span></summary>
         </details>
-        <div class="sdpi-item" id="dvSourceName">
-            <div class="sdpi-item-label">Source Name</div>
-            <input class="sdpi-item-value sdProperty" placeholder="Source name in OBS" value="" id="sourceName" oninput="setSettings()">
+         <div class="sdpi-item" id="dvSceneName">
+            <div class="sdpi-item-label">OBS Scene Name</div>
+            <select class="sdpi-item-value select sdProperty sdList" id="scenes" oninput="setSettings()" sdListTextProperty="sceneName" sdListValueProperty="sceneName" sdValueField="sceneName"></select>
+        </div>
+        <div class="sdpi-item" id="dvInputNameSelect">
+            <div class="sdpi-item-label">'Image Source' Name</div>
+            <select class="sdpi-item-value select sdProperty sdList" id="inputs" oninput="setSettings()" sdListTextProperty="inputName" sdListValueProperty="inputName" sdValueField="inputName"></select>
         </div>
         <div class="sdpi-item" id="dvImageFilename">
             <div class="sdpi-item-label">File Name</div>
