--- a/streamdeck-obstools/PropertyInspector/FocusedWindowCapture.html
+++ b/streamdeck-obstools/PropertyInspector/FocusedWindowCapture.html
@@ -23,7 +23,7 @@
             </details>
         </div>
         <div class="sdpi-item" id="dvSceneName">
-            <div class="sdpi-item-label">Scene Name</div>
+            <div class="sdpi-item-label">Scene</div>
             <select class="sdpi-item-value select sdProperty sdList" id="scenes" oninput="setSettings()" sdListTextProperty="sceneName" sdListValueProperty="sceneName" sdValueField="sceneName"></select>
         </div>
         <div class="sdpi-item" id="dvSourceNameSelect">
