--- a/streamdeck-obstools/PropertyInspector/SourceToggle.html
+++ b/streamdeck-obstools/PropertyInspector/SourceToggle.html
@@ -18,11 +18,11 @@
             <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.com</span></summary>
         </details>
         <div class="sdpi-item" id="dvSceneName">
-            <div class="sdpi-item-label">Scene Name</div>
+            <div class="sdpi-item-label">Scene</div>
             <select class="sdpi-item-value select sdProperty sdList" id="scenes" oninput="setSettings()" sdListTextProperty="sceneName" sdListValueProperty="sceneName" sdValueField="sceneName"></select>
         </div>
         <div class="sdpi-item" id="dvSourceNameSelect">
-            <div class="sdpi-item-label">Source Name</div>
+            <div class="sdpi-item-label">Source</div>
             <select class="sdpi-item-value select sdProperty sdList" id="sources" oninput="setSourceNameSetting()" sdListTextProperty="sourceName" sdListValueProperty="sourceName" sdValueField="sourceName"></select>
         </div>
         <div class="sdpi-item" id="dvSourceName" style="display:none;">
