--- a/streamdeck-obstools/PropertyInspector/InputVolumeDial.html
+++ b/streamdeck-obstools/PropertyInspector/InputVolumeDial.html
@@ -17,7 +17,7 @@
             <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.com</span></summary>
         </details>
         <div class="sdpi-item" id="dvSourceName">
-            <div class="sdpi-item-label">Input Name</div>
+            <div class="sdpi-item-label">Input</div>
             <select class="sdpi-item-value select sdProperty sdList" id="inputs" oninput="setSettings()" sdListTextProperty="inputName" sdListValueProperty="inputName" sdValueField="inputName"></select>
         </div>
         <div class="sdpi-item" id="dvStepSize">
