--- a/streamdeck-obstools/PropertyInspector/SmartSceneSwitcher.html
+++ b/streamdeck-obstools/PropertyInspector/SmartSceneSwitcher.html
@@ -17,7 +17,7 @@
             <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.com</span></summary>
         </details>
         <div class="sdpi-item" id="dvSceneName">
-            <div class="sdpi-item-label">Scene Name</div>
+            <div class="sdpi-item-label">Scene</div>
             <select class="sdpi-item-value select sdProperty sdList" id="scenes" oninput="setSettings()" sdListTextProperty="sceneName" sdListValueProperty="sceneName" sdValueField="sceneName"></select>
         </div>
         <div type="checkbox" class="sdpi-item" id="dvTransition">
