--- a/streamdeck-obstools/PropertyInspector/SourceAnimation.html
+++ b/streamdeck-obstools/PropertyInspector/SourceAnimation.html
@@ -20,7 +20,7 @@
             <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.com</span></summary>
         </details>
         <div class="sdpi-item" id="dvSourceName">
-            <div class="sdpi-item-label">Source Name</div>
+            <div class="sdpi-item-label">Source</div>
             <select class="sdpi-item-value select sdProperty sdList" id="sources" oninput="setSettings()" sdListTextProperty="name" sdListValueProperty="name" sdValueField="sourceName"></select>
         </div>
         <div class="sdpi-item" id="dvRepeat">
