--- a/streamdeck-obstools/PropertyInspector/VideoPlayer.html
+++ b/streamdeck-obstools/PropertyInspector/VideoPlayer.html
@@ -21,7 +21,7 @@
             <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.com</span></summary>
         </details>
         <div class="sdpi-item" id="dvSceneName">
-            <div class="sdpi-item-label">OBS Scene Name</div>
+            <div class="sdpi-item-label">Scene</div>
             <select class="sdpi-item-value select sdProperty sdList" id="scenes" oninput="setSettings()" sdListTextProperty="sceneName" sdListValueProperty="sceneName" sdValueField="sceneName"></select>
         </div>
         <div class="sdpi-item" id="dvInputNameSelect">
